# fore-coffee-iq

./: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt
api/: agent.py  config.py  dto.py  main.py  retriever.py  server.py  utils.py
api/agent/: agent_executor.py
api/controllers/chat/: dto.py  models.py  routes.py  service.py  utils.py
api/dataset/: chitchat.py  data.py  dataset.py
api/dataset/faq/: brand_identity_philosophy.py  brand_product_information.py  ownership_origins.py
api/embeddings/: text_embedding.py
api/middlewares/: cors.py
api/prompt/: system_prompt.py
api/utils/: clean_processor.py  prompt_template_parser.py
api/vectorstore/: pinecone.py
scripts/: dev.py  run.py
web/: next.config.mjs  package-lock.json  package.json
web/.next/: trace
web/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @swc.js  next.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js
web/.next/static/webpack/: webpack.31650d43e9d4851e.hot-update.js  webpack.6aecefbb1f7aa77b.hot-update.js  webpack.a6ee4f82e918a42f.hot-update.js
web/.next/types/app/: layout.ts  page.ts
web/app/: layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/components/: Chat.tsx  ChatArea.tsx  QA.tsx
web/hooks/: useHandleStream.ts
web/lib/context/ChatProvider/: ChatProvider.tsx  types.ts
web/utils/: generatePlaceHolderMessage.ts
(+13 files in other folders)
